# ibm-mlops

./: .gitignore  cmd_init.txt  makefile  pyproject.toml
.dvc/: .gitignore  config
data/: .gitignore  breast_cancer_data.csv.dvc
notebook/: breast_cancer_notebook.ipynb
