[tool.poetry]
name = "oncology-model"
version = "0.1.0"
description = ""
authors = ["Fabian Lanz <fabianlanz@nl.ibm.ibm.com>",
    "Sebastian Hirschl <sebastian.hirschl@de.ibm.com>",
    "Thomas Pfeiffer <thomas.pfeiffer@de.ibm.com>"]
readme = "README.md"
repository = "https://github.com/Alhassan89/ibm-mlops"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11"]

[tool.poetry.dependencies]
python = "^3.11"
joblib = "==1.2.0"
scikit-learn = "==1.1.3"

[tool.poetry.dev-dependencies]
dvc = "==2.56.0"
dvc-s3 = "==2.22.0"
pandas = "==1.5.3"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"

